# gaussian-activation-steering

./: README.md  pyproject.toml  requirements.txt
configs/: example-baseline-config.yaml  example-steering-config.yaml  train_lorra.yaml
experiments/: baseline.py  gaussian_ablations.py  gaussian_depth_schedule.py  lorra.py
gauss_steer/control/: control.py  extract.py  saes.py  train_control_vector.py
gauss_steer/lorra/: argument_dataclasses.py  train_dataset.py  train_lorra.py  utils.py
gauss_steer/mask/: aggregate.py  calculate.py  evaluate.py  generate.py  pipeline.py
gauss_steer/mask/mask_utils/: evaluation_client.py  evaluation_prompts.py
gauss_steer/utils/: constants.py  model.py  prompt_templates.py  utils.py
